# poetry-plugin-setuppy

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  setup.py
poetry_plugin_setuppy/: commands.py  plugins.py  services.py
