[tool.poetry]
name = "poetry-plugin-setuppy"
version = "0.1.0"
description = "This plugin was created to create (or rebuild) the setup.py file"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poetry_plugin_setuppy"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
